=======
CHANGES
=======

3.6.0 (unreleased)
------------------

- ...

3.5.2 (2008-12-28)
------------------

- Remove testing dependencies from install_requires.

3.5.1 (2007-10-31)
------------------

- Resolve ``ZopeSecurityPolicy`` deprecation warning.


3.5.0 (2007-10-11)
------------------

- Updated some meta-data.

- Move ``ftests.py`` to ``tests.py``.


3.5.0a3 (2007-09-27)
--------------------

- removed some deprecations


3.5.0a2 (2007-09-21)
--------------------

- bugfix: passing the context to getAllUtilitiesRegisteredFor in all
  eventhandlers because no catalog was found which was located in a
  sub site and for example the ObjectModifiesEvent get fired from somewhere
  in the root.


3.5.0a1 (2007-06-26)
--------------------

- Added marker interfaces to prevent automatic indexing (see: ``event.txt``)
