@@ -69,7 +69,7 @@ setup(name = 'zope.app.catalog',
           'zope.app.container',
           'zope.app.intid',
           'zope.component',
-          'zope.index',
+          'zope.index>=3.5.0',
           'zope.interface',
           'zope.lifecycleevent',
           'zope.location',
