@@ -65,9 +65,55 @@
     />
 
 <addform
+    name="AddKeywordIndex"
+    label="Add a keyword index"
+    schema="..interfaces.IAttributeIndex"
+    permission="zope.ManageServices"
+    content_factory="..keyword.KeywordIndex"
+    arguments="field_name"
+    keyword_arguments="interface field_callable"
+    />
+
+<addMenuItem
+    title="Keyword Index"
+    description="Index items based on sequence of keywords"
+    class="..keyword.KeywordIndex"
+    permission="zope.ManageServices"
+    view="AddKeywordIndex"
+   />
+
+<addform
+    name="AddCaseInsensitiveKeywordIndex"
+    label="Add a keyword index (case-omsensitive)"
+    schema="..interfaces.IAttributeIndex"
+    permission="zope.ManageServices"
+    content_factory="..keyword.CaseInsensitiveKeywordIndex"
+    arguments="field_name"
+    keyword_arguments="interface field_callable"
+    />
+
+<addMenuItem
+    title="Keyword Index (case-insensitive)"
+    description="Index items based on sequence of keywords"
+    class="..keyword.CaseInsensitiveKeywordIndex"
+    permission="zope.ManageServices"
+    view="AddCaseInsensitiveKeywordIndex"
+   />
+
+<schemadisplay
+    name="index.html"
+    schema="..keyword.IKeywordIndex"
+    label="Keyword Index"
+    fields="interface field_name field_callable"
+    permission="zope.ManageServices"
+    menu="zmi_views" title="Configuration"
+    />
+
+<addform
     name="AddTextIndex"
     label="Add a text index"
-    schema="..interfaces.IAttributeIndex"
+    schema="..text.ITextIndex"
+    fields="interface field_name field_callable"
     permission="zope.ManageServices"
     content_factory="..text.TextIndex"
     arguments="field_name"
